you can delete messages now TextInput.xaml.cs, new delete button in TextInput.xaml, you can see the names of the users at the beginning of the chat

--- a/MyMessenger1/MyMessenger1/TextInputPage.xaml
+++ b/MyMessenger1/MyMessenger1/TextInputPage.xaml
@@ -34,6 +34,13 @@
                     Clicked="ButtonSend_Clicked"
                     Text=">" />
             </StackLayout>
+
+            <Button
+                    x:Name="ButtonDelete"
+                    Clicked="ButtonDelete_Clicked"
+                    Text="Chat löschen"
+                    BackgroundColor="Red"/>
+            
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
